# Nulp

ComputerGraphics/Lab1/: main.cpp
InternetOfThingsTechnologies/Lab4/: Meteostation.drawio
InternetOfThingsTechnologies/Project/Meteostation/: CMakeLists.txt  sdkconfig
InternetOfThingsTechnologies/Project/Meteostation/components/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h
InternetOfThingsTechnologies/Project/Meteostation/components/ens160/: CMakeLists.txt  ens160.c  ens160.h
InternetOfThingsTechnologies/Project/Meteostation/components/hall_sensor/: CMakeLists.txt  hall_sensor.c  hall_sensor.h
InternetOfThingsTechnologies/Project/Meteostation/main/: CMakeLists.txt  main.c
InternetOfThingsTechnologies/Reports/: ТехнологіїІнтернетРечей_Верещак_Лаб4.docx  ТехнологіїІнтернетРечей_Верещак_Лаб5.docx  ТехнологіїІнтернетРечей_Верещак_Лаб6.docx
PatternRecognitionAndComputerVision/Lab1/: main.cpp  main.py
PatternRecognitionAndComputerVision/Lab2/: main.cpp
PatternRecognitionAndComputerVision/Lab3/: main.cpp
PatternRecognitionAndComputerVision/Reports/: КомпютернийЗір_Верещак_Лаб1.docx  КомпютернийЗір_Верещак_Лаб3.docx
UseOfAISystems/Reports/: ЗастосуванняШІ_Верещак_Лаб1.docx  ЗастосуванняШІ_Верещак_Лаб2Част1.docx
